--- a/WebContent/resources/css/loginstyle.css
+++ b/WebContent/resources/css/loginstyle.css
@@ -2,14 +2,14 @@
 
 /* Style of navbar : START */
 .navbar {
-    height: 10vh;
-    background-color: lightgrey;
-    box-shadow: 3px 1px 5px 0px rgba(0,0,0,0.75);
-    display: flex; 
-    background-image: linear-gradient(-225deg, #000BB8 0%, #054f6e 51%, #4A55F0 100%);
-    background-size: 400% 400%;
-    animation: gradient 10s ease infinite;
-    opacity:1;
+	height: 10vh;
+	background-color: lightgrey;
+	box-shadow: 3px 1px 5px 0px rgba(0, 0, 0, 0.75);
+	display: flex;
+	background-image: linear-gradient(-225deg, #000BB8 0%, #054f6e 51%, #4A55F0 100%);
+	background-size: 400% 400%;
+	animation: gradient 10s ease infinite;
+	opacity: 1;
 }
 
 @keyframes gradient {
@@ -25,70 +25,71 @@
 }
 
 .navbutton {
-    margin:auto!important; 
+	margin: auto !important;
 }
 /* Style of navbar : END */
-
 html {
-  height: 100%;
+	height: 100%;
 }
+
 body {
-  margin:0;
-  padding:0;
-  font-family: sans-serif;
-  background: linear-gradient(#141e30, #243b55);
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	background: linear-gradient(#141e30, #243b55);
 }
 
 .login-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 400px;
-  padding: 40px;
-  transform: translate(-50%, -50%);
-  background: rgba(0,0,0,.5);
-  box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0,0,0,.6);
-  border-radius: 10px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 400px;
+	padding: 40px;
+	transform: translate(-50%, -50%);
+	background: rgba(0, 0, 0, .5);
+	box-sizing: border-box;
+	box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+	border-radius: 10px;
 }
 
 .login-box h2 {
-  margin: 0 0 30px;
-  padding: 0;
-  color: #fff;
-  text-align: center;
+	margin: 0 0 30px;
+	padding: 0;
+	color: #fff;
+	text-align: center;
 }
 
 .login-box .user-box {
-  position: relative;
+	position: relative;
 }
 
 .login-box .user-box .input {
-  width: 100%;
-  padding: 10px 0;
-  font-size: 16px;
-  color: #fff;
-  margin-bottom: 30px;
-  border: none;
-  border-bottom: 1px solid #fff;
-  outline: none;
-  background: transparent;
+	width: 100%;
+	padding: 10px 0;
+	font-size: 16px;
+	color: #fff;
+	margin-bottom: 30px;
+	border: none;
+	border-bottom: 1px solid #fff;
+	outline: none;
+	background: transparent;
 }
+
 .login-box .user-box .label {
-  top:0;
-  left: 0;
-  padding: 10px 0;
-  font-size: 16px;
-  color: #fff;
-  pointer-events: none;
-  transition: .5s;
+	top: 0;
+	left: 0;
+	padding: 10px 0;
+	font-size: 16px;
+	color: #fff;
+	pointer-events: none;
+	transition: .5s;
 }
 
-.login-box .user-box .input:focus ~ .label,
-.login-box .user-box .input:valid ~ .label {
-  top: -20px;
-  left: 0;
-  color: #03e9f4;
-  font-size: 12px;
+.errormessages {
+	padding: 10px 0;
+	font-size: 12px;
+	margin-bottom: 16px;
+	box-sizing: border-box;
+	outline: none;
+	color: #F01905;
 }
-
