adding partie.xhtml with his .java functions to get top and left (x and y)

--- a/WebContent/views/menuser.xhtml
+++ b/WebContent/views/menuser.xhtml
@@ -19,7 +19,7 @@
 		<h2 class="p-text-center text-menu">Bonjour #{menuserBean.u.nom}
 			#{menuserBean.u.prenom}</h2>
 		<div class="p-offset-2">
-			<p class="text-menu">Vous avez #{menuserBean.p.size()} en cours :</p>
+			<p class="text-menu">Vous avez #{menuserBean.p.size()} partie(s) en cours :</p>
 		</div>
 		<div class="p-grid p-offset-2">
 
@@ -61,7 +61,7 @@
 			</h:form>
 		</div>
 	</h:body>
-	<!-- menuserBean.u.email eq d.tourjoueur ? a vous de jouer : à votre adversaire de jouer -->
+	
 </f:view>
 
 </html>
