--- a/WebContent/views/partie.xhtml
+++ b/WebContent/views/partie.xhtml
@@ -1,69 +1,76 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:pe="http://primefaces.org/ui/extensions">
 
-<h:head>
+<f:view contentType="text/html;charset=UTF-8" encoding="UTF-8">
+
+	<h:head>
+		<title>Battleship/game</title>
+		<h:outputStylesheet library="css" name="primeflex.min.css" />
+		<h:outputStylesheet library="css" name="partiestyle.css" />
+
+	</h:head>
+
+	<h:body>
+		<div class="container p-d-flex p-jc-center">
+			<form id="form" method="post"
+				action="/battleship/faces/views/partie.xhtml" class="p-as-center">
+
+				<div id="restrictPanel" class="card">
+					<p:panel styleClass="bateau" id="droppable">
+						<p:droppable widgetVar="dropWV" for="droppable">
+							<p:ajax listener="#{placementBean.onDrop}" />
+						</p:droppable>
+					</p:panel>
+
+					<p:panel styleClass="bateau" id="contre-torpilleur" header="">
+					</p:panel>
+					<p:draggable for="contre-torpilleur" grid="60,60"
+						containment="parent" />
+
+					<p:panel styleClass="bateau" id="sous-marin" header="">
+					</p:panel>
+					<p:draggable for="sous-marin" grid="60,60" containment="parent" />
+
+					<p:panel styleClass="bateau" id="torpilleur" header="">
+					</p:panel>
+					<p:draggable for="torpilleur" grid="60,60" containment="parent" />
+
+					<p:panel styleClass="bateau" id="croiseur" header="">
+					</p:panel>
+					<p:draggable for="croiseur" grid="60,60" containment="parent" />
+
+					<p:panel styleClass="bateau" id="porte-avion" header="">
+					</p:panel>
+					<p:draggable for="porte-avion" grid="60,60" containment="parent" />
 
 
+				</div>
+			</form>
 
-</h:head>
+			<h:form styleClass="p-as-center p-jc-center button-form">
+				<div>
+					<p:commandButton ajax="false" styleClass="ui-button-secondary"
+						action="#{placementBean.Grille}" value="Valider la Grille" />
+				</div>
+				<div>
+					<h:outputText value="#{placementBean.message}"
+						styleClass="errormessages"></h:outputText>
+				</div>
+			</h:form>
+		</div>
 
-<BODY>
 
-	<p:growl autoUpdate="true"></p:growl>
-	<h:form id="form">
-		<p:panel id="draggable1" style="z-index:1; width: 60px; height: 60px;">
-			<h:outputText value="CAM-1" />
-			<p:draggable for="draggable1" revert="false" />
-		</p:panel>
+		<h:outputScript type="text/javascript" library="js" name="appgrid.js" />
+		<h:outputScript type="text/javascript" library="js"
+			name="apppartie.js" />
 
-		<p:panel id="droppable"
-			style="z-index:1; width: 600px; height: 600px;">
-			<p:droppable widgetVar="dropWV" for="droppable">
-				<p:ajax listener="#{placementBean.onDrop}" />
-			</p:droppable>
-		</p:panel>
-	</h:form>
-	<script>
-		//<![CDATA[
-		PrimeFaces.widget.Droppable.prototype.bindDropListener = function() {
-			var _self = this;
+	</h:body>
 
-			this.cfg.drop = function(event, ui) {
-				if (_self.cfg.onDrop) {
-					_self.cfg.onDrop.call(_self, event, ui);
-				}
-				if (_self.cfg.behaviors) {
-					var dropBehavior = _self.cfg.behaviors['drop'];
+</f:view>
 
-					if (dropBehavior) {
-						var ext = {
-							params : [ {
-								name : _self.id + '_dragId',
-								value : ui.draggable.attr('id')
-							}, {
-								name : _self.id + '_dropId',
-								value : _self.cfg.target
-							}, {
-								name : ui.draggable.attr('id') + '_left',
-								value : ui.position.left
-							}, {
-								name : ui.draggable.attr('id') + '_top',
-								value : ui.position.top
-							} ]
-						};
-						console.log(ui);
-						dropBehavior.call(_self, ext);
-					}
-				}
-			};
-		}
-		// ]]>
-	</script>
-</BODY>
 </html>
