--- a/WebContent/views/grille.xhtml
+++ b/WebContent/views/grille.xhtml
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <f:view contentType="text/html;charset=UTF-8" encoding="UTF-8">
 	<h:head>
@@ -11,24 +12,23 @@
 	</h:head>
 	<h:body>
 		<h:form>
-		<table border="1">
-			<tr>
-				<ui:repeat var="ligne" value="#{grille.lignes}" varStatus="status">
-					<tr>
-						<ui:repeat var="unecase" value="#{ligne}" varStatus="status">
-							<td><h:commandButton
-									style="background : #{grille.couleur(unecase)}"
-									value="#{unecase}" action="#{grille.tir (unecase)}"></h:commandButton></td>
-						</ui:repeat>
-					</tr>
+			<div class="container">
+				<ui:repeat var="c" value="#{grilleBean.grillejoueur}"
+					varStatus="status">
+					 <h:commandButton styleClass="grillbutton" style="background-color:#{c.color};" value="#{c.value}" />
 				</ui:repeat>
-			</tr>
-			<tr>
-				<td colspan="10"><h:commandButton style="width : 100%"
-						value="reset" action="#{grille.reset()}"></h:commandButton></td>
-			</tr>
-		</table>
-	</h:form>
+			</div>
+		</h:form>
+		<div></div>
+		<h:form>
+			<div class="container">
+				<ui:repeat var="c" value="#{grilleBean.grillejoueurAdverse}"
+					varStatus="status">
+					 <h:commandButton styleClass="grillbutton" style="background-color:#{c.color};" value="#{c.value}" action="#{grilleBean.tirer(c.x, c.y)}"/>
+				</ui:repeat>
+			</div>
+		</h:form>
+		
 	</h:body>
 </f:view>
 
