--- a/WebContent/resources/css/grillestyle.css
+++ b/WebContent/resources/css/grillestyle.css
@@ -14,7 +14,14 @@ body {
 .container {
 	display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-gap: 0.2rem;
-    margin-bottom:50px;
-    width:50%;
+    grid-gap: 0.1rem;
+    margin-bottom:3rem;
+    margin-top:3rem;
+    width:500px;
+    height:500px;
+}
+
+.grillbutton {
+	width:50px;
+	height:50px;
 }
